--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,10 @@
     }
   ],
   "require": {
-    "php": ">=5.4.0"
+    "php": ">=5.4.0",
+    "symfony/yaml" : "dev-master",
+    "symfony/console" : "dev-master",
+    "mikejestes/scheezy": "dev-master"
   },
   "autoload": {
     "psr-0": {"ebuildy": "src/", "Twig_Node_Expression_" : "eBuildy/Templating/GetAttr.php"},
