--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,9 @@
 {
   "name": "ebuildy/ebuildy",
   "type":"library",
-  "description": "PHP Framework",
+  "description": "PHP MVC Framework",
   "keywords": ["mvc","framework","php","annotations","ioc"],
   "homepage": "http://github.com/ebuildy/ebuildy",
-  "type": "library",
   "license": "MIT",
   "authors": [
     {
