--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "mikejestes/scheezy": "dev-master"
   },
   "autoload": {
-    "psr-0": {"ebuildy": "src/", "Twig_Node_Expression_" : "eBuildy/Templating/GetAttr.php"},
-    "classmap": ["./src/eBuildy/Templating/GetAttr.php"]
+    "psr-0": {"ebuildy": "src/", "Twig_Node_Expression_" : "src/eBuildy/Templating/Twig/GetAttr.php"},
+    "classmap": ["src/eBuildy/Templating/Twig/GetAttr.php", "src/eBuildy/Templating/Twig/ExpressionName.php"]
   }
 }
