--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     }
   ],
   "require": {
-    "php": ">=5.4.0",
+    "php": ">=5.4.0"
   },
   "suggest" : {
     "symfony/yaml" : "dev-master",
